--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cookieparser": "^0.1.0",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "moongoose": "^0.0.1"
