--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.3.0",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "firebase": "^11.0.1",
     "flowbite-react": "^0.10.2",
     "moment": "^2.30.1",
