--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
   "name": "blog-website",
   "version": "1.0.0",
-  "description": "",
+  "description": "A blog website for lifestyle, motivation, and cooking.",
   "type": "module",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon api/index.js",
     "start": "node api/index.js",
-    "build":"npm install&& npm install --prefix client && npm run build --prefix client"
+    "build": "npm install --prefix client && npm run build --prefix client"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["blog", "lifestyle", "motivation", "cooking"],
+  "author": "Your Name",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cookieparser": "^0.1.0",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
-    "moongoose": "^0.0.1"
+    "mongoose": "^7.0.0"
   }
 }
