--- a/package.json
+++ b/package.json
@@ -1,27 +1,24 @@
 {
-  "name": "blog-website",
+  "name": "mern-blog",
   "version": "1.0.0",
-  "description": "A blog website for lifestyle, motivation, and cooking.",
+  "description": "",
   "type": "module",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon api/index.js",
     "start": "node api/index.js",
-    "build": "npm install --prefix client && npm run build --prefix client"
+    "build": "npm install && npm install --prefix client && npm run build --prefix client"
   },
-  "keywords": [
-    "blog",
-    "lifestyle",
-    "motivation",
-    "cooking"
-  ],
-  "author": "Your Name",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "cookieparser": "^0.1.0",
-    "express": "^4.21.1",
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.0.0"
+    "mongoose": "^8.0.2",
+    "nodemon": "^3.0.2"
   }
 }
